added more routes
