# routes/temple.js
@@ -6,4 +6,12 @@ routes.get('/:temple_id', temples.findOne);
 
 routes.post('/', temples.create);
 
+routes.put('/:temple_id', temples.update);
+
+routes.delete('/:temple_id', temples.delete);
+
+routes.delete('/', temples.deleteAll);
+
+routes.get('/published', temples.findAllPublished);
+
 module.exports = routes;
